# xvm

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Dependencies/google-benchmark/lib/Debug/: benchmark_main.lib
Dependencies/google-benchmark/lib/Release/: benchmark.lib  benchmark_main.lib
Source/: CMakeLists.txt
Source/Benchmark/: CMakeLists.txt  Vec2.h
Source/Test/: CMakeLists.txt  Vec3.h  main.cpp
Source/xvm/: Intrinsics.h  Intrinsics.inl  Intrinsics.natvis
benchmark/: CMakeLists.txt  Vec2.h  main.cpp
src/xvm/: Intrinsics.h  Intrinsics.inl  Intrinsics.natvis
test/: CMakeLists.txt  Matrix4x4.h  Quaternion.h  Vec2.h  Vec3.h  Vec4.h  float2.h  float3.h  float4.h  float4x4.h  main.cpp
